--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
   <html>
-    <head>
-      <meta charset="UTF-8">
-      <title>Hello World!</title>
-    </head>
     <body>
-      <h1>Hello World!</h1>
-      We are using node <script>document.write(process.versions.node)</script>,
-      Chrome <script>document.write(process.versions.chrome)</script>,
-      and Electron <script>document.write(process.versions.electron)</script>.
+      <div style="width: 320; height: 480; font-family: sans-serif; padding: 0; color: white;">
+          THIS BE WHERE YA CLIPBOARD ITEMS GOOOO
+      </div>
     </body>
   </html>
