--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
   <html>
     <body>
       <div style="width: 320; height: 480; font-family: sans-serif; padding: 0; color: white;">
-          THIS BE WHERE YA CLIPBOARD ITEMS GOOOO
+          <p id="testItem">CLICK TO COPY THIS TEXT LOL REKT SAVAGE<p>
       </div>
     </body>
+
+
+    <script src="mainViewController.js"></script>
+
   </html>
