--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
   <html>
+    <link rel="stylesheet" href="./main.css"/>
+
     <body>
-      <div style="width: 320; height: 480; font-family: sans-serif; padding: 0; color: white;">
-          <p id="testItem">CLICK TO COPY THIS TEXT LOL REKT SAVAGE<p>
+      <div class="workableArea">
+          <p id="testItem"><p>
       </div>
     </body>
 
