--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
   <html>
     <link rel="stylesheet" href="./main.css"/>
 
+    <head>
+      <!-- This plugin works wonders -->
+    </head>
+
+
     <body>
       <div class="workableArea">
-          <p id="testItem"><p>
+          <div class="topBar"></div>
+
+          <div class="itemContainer">
+            <div class="testItem"></div>
+            <div class="testItem"></div>
+            <div class="testItem"></div>
+            <div class="testItem"></div>
+          </div>
       </div>
     </body>
 
