--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
           <div class="topBar"></div>
 
           <div class="itemContainer">
-            <div class="testItem"></div>
-            <div class="testItem"></div>
-            <div class="testItem"></div>
-            <div class="testItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
+            <div class="linkItem"></div>
           </div>
       </div>
     </body>
