Attempted to integrate IPC processes
Tried to build the communication process for the main window of the application using a tutorial from https://coursetro.com/posts/code/122/Electron-IPC-Tutorial---Communication-within-your-Electron-App

Not really sure if this is what we need since the tutorial is for transfering data between two windows. We only have one window here, so I think we should be able to bypass all this IPC stuff and send the contents of the array directly to the window.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
+<!--
+const ipc = electron.ipcRenderer
+
+var clipboardHistory;
+
+//Recieve message from index.js through IPC ipcRenderer
+//Not really sure where this is supposed to go...
+//See https://coursetro.com/posts/code/122/Electron-IPC-Tutorial---Communication-within-your-Electron-App
+ipc.on('clipboard-history', function (event, arg) {
+  clipboardHistory = arg;
+})
+-->
   <html>
     <link rel="stylesheet" href="./main.css"/>
 
     <head>
       <!-- This plugin works wonders -->
     </head>
-
 
     <body>
       <div class="workableArea">
