Moved clipboard watcher to index.js, now should add directly to window

--- a/index.html
+++ b/index.html
@@ -2,20 +2,7 @@
   <html>
     <link rel="stylesheet" href="./main.css"/>
 
-    <!--
-    <script>
-      const ipc = electron.ipcRenderer
-
-      var clipboardHistory;
-
-      //Recieve message from index.js through IPC ipcRenderer
-      //Not really sure where this is supposed to go...
-      //See https://coursetro.com/posts/code/122/Electron-IPC-Tutorial---Communication-within-your-Electron-App
-      ipc.on('clipboard-history', function (event, arg) {
-        clipboardHistory = arg;
-      })
-    </script>
-    -->
+    <script>source="index.js"</script>
 
     <head>
       <!-- This plugin works wonders -->
