--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <link rel="stylesheet" href="./main.css"/>
 
-    <script>source="index.js"</script>
+    <script src="index.js"></script>
 
     <head>
       <!-- This plugin works wonders -->
@@ -12,22 +12,8 @@
       <div class="workableArea">
           <div class="topBar"></div>
 
-          <div class="itemContainer">
-            <div class="linkItem">
-              <img id="testImage">
-            </div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
-            <div class="linkItem"></div>
+          <div class="itemContainer" id="historyList">
+
           </div>
       </div>
     </body>
