--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
   <html>
-    <link rel="stylesheet" href="./main.css"/>
-
-    <script src="index.js"></script>
-
+    
     <head>
       <!-- This plugin works wonders -->
+      <link rel="stylesheet" href="./main.css"/>
+      <link href="https://fonts.googleapis.com/css?family=Shanti" rel="stylesheet">
     </head>
 
     <body>
@@ -18,7 +17,6 @@
       </div>
     </body>
 
-
-    <script src="mainViewController.js"></script>
-
+    <script src="index.js"></script>
+    
   </html>
