--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div id="appName">Clippr</div>
 
             <!-- Exit the application by clicking an x -->
-            <div id="exitApp">
-              <img src="assets/icons/ic_exit_large.png"/>
+            <div id="exitApp" onclick="closeApp()">
+              <img id="exit" onclick="closeApp()" src="assets/icons/ic_exit_large.png"/>
             </div>
           
           </div>
