--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div id="appName">Clippr</div>
 
             <!-- Exit the application by clicking an x -->
-            <div id="exitApp" onclick="closeApp()">
-              <img id="exit" onclick="closeApp()" src="assets/icons/ic_exit_large.png"/>
+            <div id="exitApp">
+              <img id="exit" src="assets/icons/ic_exit_large.png"/>
             </div>
           
           </div>
@@ -30,6 +30,17 @@
     </body>
 
     <script src="index.js"></script>
-    <!--script src="init.js"></script>-->
-    
+
+    <script>
+      document.getElementById("exitApp").addEventListener("click", function(e) {
+      var window = require("electron").remote.getCurrentWindow()
+      window.close();
+      })
+
+      document.getElementById("exit").addEventListener("click", function(e) {
+      var window = require("electron").remote.getCurrentWindow()
+      window.close();
+      })
+
+    </script>
   </html>
